--- a/application/pom.xml
+++ b/application/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>sample.multimodule</groupId>
-        <artifactId>sample.multimodule</artifactId>
+        <groupId>com.tracemeifyoucan</groupId>
+        <artifactId>tracemeifyoucan-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>sample.multimodule.application</artifactId>
+    <artifactId>application</artifactId>
     <packaging>jar</packaging>
     <name>Project Module - Application</name>
     <description>This is the main module of the project. It contains Application.java class, that contains main method, 
@@ -18,8 +18,8 @@
 
       <!-- Project modules -->
       <dependency>
-        <groupId>sample.multimodule</groupId>
-        <artifactId>sample.multimodule.service.impl</artifactId>
+        <groupId>com.tracemeifyoucan</groupId>
+        <artifactId>governor</artifactId>
         <version>${project.version}</version>
       </dependency>
 
