--- a/publisher/pom.xml
+++ b/publisher/pom.xml
@@ -2,23 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>sample.multimodule</groupId>
-        <artifactId>sample.multimodule</artifactId>
+        <groupId>com.tracemeifyoucan</groupId>
+        <artifactId>tracemeifyoucan-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>sample.multimodule.service.api</artifactId>
+    <artifactId>publisher</artifactId>
     <packaging>jar</packaging>
     <name>Project Module - Service API</name>
     <description>Module that contains API of all project services. Depends of Model Module.</description>
 
     <dependencies>
 
-      <!-- Project Modules -->
-      <dependency>
-        <groupId>sample.multimodule</groupId>
-        <artifactId>sample.multimodule.model</artifactId>
-        <version>${project.version}</version>
-      </dependency>
 
     </dependencies>
     
