--- a/publisher/pom.xml
+++ b/publisher/pom.xml
@@ -12,7 +12,10 @@
     <description>Module that contains API of all project services. Depends of Model Module.</description>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
     </dependencies>
     
