--- a/publisher/pom.xml
+++ b/publisher/pom.xml
@@ -32,6 +32,16 @@
 			<artifactId>exporter-trace</artifactId>
 			<version>0.11.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.api</groupId>
+			<artifactId>gax</artifactId>
+			<version>1.61.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.api</groupId>
+			<artifactId>gax-grpc</artifactId>
+			<version>1.61.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
