--- a/publisher/pom.xml
+++ b/publisher/pom.xml
@@ -42,6 +42,11 @@
 			<artifactId>gax-grpc</artifactId>
 			<version>1.61.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.opentelemetry</groupId>
+			<artifactId>opentelemetry-extension-auto-annotations</artifactId>
+			<version>0.10.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
