--- a/application/pom.xml
+++ b/application/pom.xml
@@ -27,6 +27,20 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.opentelemetry</groupId>
+			<artifactId>opentelemetry-sdk</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.opentelemetry.instrumentation</groupId>
+			<artifactId>opentelemetry-otlp-exporter-starter</artifactId>
+			<version>0.15.0</version>
+		</dependency>
+		<dependency>
+		<groupId>io.opentelemetry.instrumentation</groupId>
+		<artifactId>opentelemetry-aws-sdk-2.2</artifactId>
+		<version>0.15.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
