--- a/application/pom.xml
+++ b/application/pom.xml
@@ -35,6 +35,7 @@
 		<dependency>
 			<groupId>io.opentelemetry.instrumentation</groupId>
 			<artifactId>opentelemetry-otlp-exporter-starter</artifactId>
+			<version>0.16.0</version>
 		</dependency>
 		<dependency>
 		<groupId>io.opentelemetry.instrumentation</groupId>
